[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Prototipo/Medidores/Agua_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prototipo/Medidores/Agua_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Prototipo/Medidores/Agua_5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Prototipo/Medidores/Agua_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Prototipo/Medidores/Agua_6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Prototipo/Medidores/Agua_4.png" type="Texture" id=6]
[ext_resource path="res://scripts/agua.gd" type="Script" id=7]

[node name="agua" type="Node2D"]
position = Vector2( -0.874725, 1.03046 )
script = ExtResource( 7 )

[node name="Agua_1" type="Sprite" parent="."]
position = Vector2( 507.987, 278.509 )
texture = ExtResource( 1 )

[node name="Agua_2" type="Sprite" parent="."]
visible = false
position = Vector2( 507.987, 289.187 )
texture = ExtResource( 2 )

[node name="Agua_3" type="Sprite" parent="."]
visible = false
position = Vector2( 507.987, 331.902 )
texture = ExtResource( 4 )

[node name="Agua_4" type="Sprite" parent="."]
visible = false
position = Vector2( 517.331, 365.273 )
texture = ExtResource( 6 )

[node name="Agua_5" type="Sprite" parent="."]
visible = false
position = Vector2( 540.023, 394.64 )
texture = ExtResource( 3 )

[node name="Agua_6" type="Sprite" parent="."]
visible = false
position = Vector2( 577.398, 415.997 )
texture = ExtResource( 5 )
